# simple-crud-based-task-mgt-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.staging  README.md  main.py  pyproject.toml  teach.md
.claude/skills/commit-and-push/: SKILL.md
.claude/skills/fastapi-builder/: SKILL.md
.claude/skills/fastapi-builder/assets/hello-world/: main.py
.claude/skills/fastapi-builder/assets/rest-api-db/: .env.example  main.py  requirements.txt
.claude/skills/fastapi-builder/assets/rest-api-db/app/: database.py
.claude/skills/fastapi-builder/assets/rest-api-db/app/models/: user.py
.claude/skills/fastapi-builder/assets/rest-api-db/app/routers/: users.py
.claude/skills/fastapi-builder/assets/rest-api-db/app/schemas/: user.py
.claude/skills/fastapi-builder/references/: patterns.md
.claude/skills/notes-taker/: SKILL.md
.claude/skills/pytest-fastapi/: SKILL.md
.claude/skills/pytest-fastapi/assets/: pyproject.toml
.claude/skills/pytest-fastapi/assets/tests/: conftest.py  test_main.py
.claude/skills/pytest-fastapi/references/: test-patterns.md
.claude/skills/python-modern-practices/: SKILL.md
.claude/skills/python-modern-practices/references/: fastapi-patterns.md
.claude/skills/sqlmodel/: SKILL.md
.claude/skills/sqlmodel/assets/: database.py  models.py
.claude/skills/sqlmodel/references/: relationships.md
notes/: kubernetes.md
tests/: conftest.py  test_tasks.py
